--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/SudoRPC/SudoRPC-TypeScript-Client-Axios/issues"
   },
   "homepage": "https://github.com/SudoRPC/SudoRPC-TypeScript-Client-Axios#readme",
+  "dependencies": {
+    "axios": "^0.27.2"
+  },
   "peerDependencies": {
     "@sudorpc/core": "*"
   },
